[package]
name = "set-deque"
version = "0.1.0"
edition = "2021"
authors = ["Zachary Showalter <zacshowa@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode  = { version = "1.3.3", features = [] }
serde = "1.0.188"
sled = "0.34.7"
serde_json = "1.0.107"
